mdm_Location/MDM_Location/src/objects/MDM_Bulkupload__c.object
<CustomObject>
    <description>MDM_Bulkupload Raw rows from Bulk Upload</description>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDM_Source</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>MDM_Bulkuploads</relationshipLabel>
        <relationshipName>BlkloadLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <label>Status_Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Uploaded_Row_Original__c</fullName>
        <label>Uploaded_Row_Original</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>MDM_Bulkupload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>MDM_Source__c</columns>
        <columns>IsProcessed__c</columns>
        <columns>Uploaded_Row_Original__c</columns>
        <columns>Status_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bulk Up Load Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Bulkuploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>